Use trybuild instead of compiletest

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,8 @@ auto_enums_core = { version = "=0.5.8", path = "core", default-features = false 
 auto_enums_derive = { version = "=0.5.8", path = "derive", default-features = false }
 
 [dev-dependencies]
-compiletest = { version = "0.3.21", package = "compiletest_rs", features = ["stable", "tmp"] }
 rustversion = "0.1"
+trybuild = "1.0"
 
 [features]
 # Default features.
